Fix footer spacing

--- a/edom.github.io/_sass/minima.scss
+++ b/edom.github.io/_sass/minima.scss
@@ -434,7 +434,7 @@ div.highlighter-rouge > * { display: inline-block; text-align: left; }
 .site-footer {
     background-color: $site-footer-background-color;
     border-top: 1px solid $grey-color-light;
-    padding: 0em 0em;
+    padding: 0.5em 0em;
     font-size: $base-font-size;
     @include media-query($on-palm) {
         font-size: $palm-font-size;
@@ -443,7 +443,8 @@ div.highlighter-rouge > * { display: inline-block; text-align: left; }
 
 .site-footer p {
   text-indent: 0em;
-  margin: 1em 0em;
+  margin: 0em;
+  padding: 0.5em 0em;
 }
 
 
